# safedrl

./: .gitignore  README.md  pyproject.toml  ~$指令.docx  指令.docx  指令2.docx
G-MAT-Lagr-main - 副本/: README.md
G-MAT-Lagr-main - 副本/multiagent/: MPE_env.py  guide_policy.py
G-MAT-Lagr-main - 副本/train_scripts/: train_AERL_nav_9agts.sh  train_GLagr_nav_9agts.sh  train_InforMARL_nav_3agts.sh  train_InforMARL_nav_9agts.sh
G-MAT-Lagr-main/multiagent/: core.py  environment.py  guide_policy.py  safety_filter.py
G-MAT-Lagr-main/onpolicy/: config.py
G-MAT-Lagr-main/render_scripts/: render_AERL_nav_3agts.sh  render_AERL_nav_9agts.sh  render_GLag_nav_3agts.sh  render_InforMARL_nav_9agts.sh  render_cbf_nav_6agts.sh  render_cbf_nav_9agts.sh
G-MAT-Lagr-main/train_scripts/: train_AERL_nav_3agts.sh  train_GLagr_nav_3agts.sh
gmarlagr/: __init__.py  buffer.py  env.py  models.py  trainer.py
official_G_MAT_Lagr/configs/: trc_cbf_gmat_lagr.yaml
official_G_MAT_Lagr/multiagent/: environment.py
official_G_MAT_Lagr/onpolicy/: config.py
official_G_MAT_Lagr/render_scripts/: render_AERL_nav_6agts.sh  render_GLag_nav_6agts.sh  render_GLag_nav_9agts.sh  render_InforMARL_nav_3agts.sh  render_InforMARL_nav_6agts.sh  render_cbf_nav_3agts.sh
official_G_MAT_Lagr/train_scripts/: train_AERL_nav_6agts.sh  train_GLagr_nav_6agts.sh  train_GMAT_CBF_ActionMask_nav_3agts.sh  train_InforMARL_nav_6agts.sh  (+1 more)
scripts/: evaluate_gmatrans_lagr.py  plot_curves.py  render_from_official_model.py  render_gif.py  render_minimal.py  train_and_render.py  train_gmatrans_lagr.py
(+137 files in other folders)
