[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gmarlagr"
version = "0.1.0"
description = "Lightweight reproduction of G-MATrans-Lagr for safe multi-agent RL."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "torch>=2.2",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
include = ["gmarlagr*"]
